[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemy/mashroom/mushroom.gd" type="Script" id=1]
[ext_resource path="res://Enemy/mashroom/assets/move-1.png" type="Texture" id=2]
[ext_resource path="res://Enemy/mashroom/assets/move-2.png" type="Texture" id=3]
[ext_resource path="res://Enemy/mashroom/assets/move-3.png" type="Texture" id=4]
[ext_resource path="res://Enemy/mashroom/assets/move-4.png" type="Texture" id=5]
[ext_resource path="res://Enemy/mashroom/assets/move-5.png" type="Texture" id=6]
[ext_resource path="res://Enemy/mashroom/assets/attack-1.png" type="Texture" id=7]
[ext_resource path="res://Enemy/mashroom/assets/attack-2.png" type="Texture" id=8]
[ext_resource path="res://Enemy/mashroom/assets/attack-3.png" type="Texture" id=9]
[ext_resource path="res://Enemy/mashroom/assets/attack-4.png" type="Texture" id=10]
[ext_resource path="res://Enemy/mashroom/assets/attack-5.png" type="Texture" id=11]
[ext_resource path="res://Enemy/mashroom/assets/attack-6.png" type="Texture" id=12]
[ext_resource path="res://Enemy/mashroom/assets/attack-7.png" type="Texture" id=13]
[ext_resource path="res://Enemy/mashroom/assets/attack-8.png" type="Texture" id=14]
[ext_resource path="res://Enemy/boss/level1/boss1_1/new_styleboxflat.tres" type="StyleBox" id=15]
[ext_resource path="res://Enemy/boss/level1/boss1_1/bge.tres" type="StyleBox" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "хотьба",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "атака",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.60144, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 10 )

[node name="Mushroom" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "хотьба"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.429272, 6.00989 )
shape = SubResource( 2 )

[node name="attack_area" type="Area2D" parent="."]
position = Vector2( -12, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 3 )

[node name="damage" type="Area2D" parent="."]
position = Vector2( -15, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
shape = SubResource( 4 )
disabled = true

[node name="visible" type="Area2D" parent="."]
position = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="visible"]
shape = SubResource( 5 )

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -6.0
margin_top = -18.0
margin_right = 29.0
margin_bottom = -4.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = ExtResource( 15 )
custom_styles/bg = ExtResource( 16 )
value = 100.0
percent_visible = false

[node name="check_place" type="RayCast2D" parent="."]
position = Vector2( -9, 4 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="idletimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="animation_finished" from="spr" to="." method="_on_spr_animation_finished"]
[connection signal="frame_changed" from="spr" to="." method="_on_spr_frame_changed"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="visible" to="." method="_on_visible_body_entered"]
[connection signal="body_exited" from="visible" to="." method="_on_visible_body_exited"]
[connection signal="timeout" from="idletimer" to="." method="_on_idletimer_timeout"]
